CE2-T128 on enter press issue on login resolved Imported from Changeset 2881

--- a/WarehouseEcommerce/Views/Theme/University/User/Login.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/User/Login.cshtml
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
         
-        @Html.PasswordFor(model => model.UserPassword, new {@class = "form-control", @placeholder = "Enter your password" })
+        @Html.PasswordFor(model => model.UserPassword, new {@class = "form-control", @placeholder = "Enter your password" , onkeyup="OnEnter(event);"})
       
     </div>
     <button type="button" class="btn btn-primary loginBtn" onclick="LoggedIn()">
