--- a/WarehouseEcommerce/Views/Theme/University/Orders/PayPal.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/PayPal.cshtml
@@ -63,7 +63,7 @@
         </div>
     </section>
 </div>
-<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=GBP"></script>
+<script src="https://www.paypal.com/sdk/js?client-id=@Model.PaypalClientId&currency=GBP"></script>
 <script>
 
     paypal.Buttons({
