fix minor css issue Imported from Changeset 2885

--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -4169,7 +4169,8 @@ body.modal-open {
         transform-origin: 50% 50%;
     }
 
-    .list-on-tablets .imagewrap {
+    .list-on-tablets .imagewrap,
+    .feature-product-overflow .imagewrap{
         border: 1px solid white;
     }
 
