--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -670,7 +670,7 @@ input[type="number"]::-webkit-outer-spin-button {
                             .mega_nav_wrap
                             .mega_nav_wrap_inner
                             .meganav_firstcatList > li:after {
-                                content: "";
+/*                                content: "";*/
                                 position: absolute;
                                 left: 100%;
                                 top: 50%;
@@ -2136,14 +2136,24 @@ input[type="number"]::-webkit-outer-spin-button {
             color: #fff;
             text-align: center;
             padding: 10px 10px;
-            letter-spacing: 4px;
+            letter-spacing: 0px;
         }
+@media(min-width:600px) {
+    .prd_lst_boxouter .foot .prd_amnt {
+        min-width: 125px;
+    }
+}
+@media(max-width:599px) {
+    .prd_lst_boxouter .foot .prd_amnt {
+        min-width: 57px;
+    }
+}
 
-        .prd_lst_boxouter .foot .icolist {
-            list-style: none;
-            margin: 0px;
-            padding: 0px;
-        }
+.prd_lst_boxouter .foot .icolist {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
 
             .prd_lst_boxouter .foot .icolist li {
                 float: left;
