--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -670,7 +670,7 @@ input[type="number"]::-webkit-outer-spin-button {
                             .mega_nav_wrap
                             .mega_nav_wrap_inner
                             .meganav_firstcatList > li:after {
-/*                                content: "";*/
+                                content: "";
                                 position: absolute;
                                 left: 100%;
                                 top: 50%;
